tests/test70.rael.exp
Error [8:11]: Division by zero
|         1 / :n
|           ^
